--- a/src/components/LongText/styles.scss
+++ b/src/components/LongText/styles.scss
@@ -51,12 +51,12 @@
 
   blockquote {
     padding-left: 1rem;
-    border-left: 2px solid rgba(#0d0d0d, 0.1);
+    border-left: 1px solid rgba(#1b1b1b, 0.5);
   }
 
   hr {
     border: none;
-    border-top: 2px solid rgba(#0d0d0d, 0.1);
-    margin: 2rem 0;
+    border-top: 1px solid rgba(#1b1b1b, 0.5);
+    margin: 1rem 0;
   }
 }
