--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,23 @@
     font-family: "Inter", sans-serif;
   } */
 }
+
+.ProseMirror-focused > * {
+  margin-bottom: 10px !important;
+}
+
+.ProseMirror > * {
+  margin-bottom: 10px !important;
+}
+
+.ProseMirror > h1 {
+  margin-top: 0 !important;
+}
+
+.ProseMirror > h2 {
+  margin-top: 0 !important;
+}
+
+.block-menu-trigger {
+  display: none !important;
+}
